data/derived/sp14/progs/unify/prog0558.ml.out
Characters 31-36:
  let _ = assoc ([], 123, [(123, "sad"); (321, "happy")]);;
                                 ^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
